--- a/layouts/chrome/footer.copyright.html
+++ b/layouts/chrome/footer.copyright.html
@@ -1,9 +1,21 @@
         <footer>
-            <div class="row">
-                <hr>
-                <div class="col-sm-12">
-                    <p>&copy; David Hernandez 2014<br>
-                    Built with <a href="https://github.com/spf13/hugo">Hugo</a></p>
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-6 col-md-offset-3 text-center">
+                        <ul class="list-inline">
+                            <li><i class="fa fa-facebook fa-3x"></i>
+                            </li>
+                            <li><i class="fa fa-twitter fa-3x"></i>
+                            </li>
+                            <li><i class="fa fa-dribbble fa-3x"></i>
+                            </li>
+                        </ul>
+                        <div class="top-scroll">
+                            <a href="#top"><i class="fa fa-circle-arrow-up scroll fa-4x"></i></a>
+                        </div>
+                        <hr>
+                        <p>Copyright &copy; Company 2013</p>
+                    </div>
                 </div>
             </div>
         </footer>
