--- a/layouts/chrome/header.includes.html
+++ b/layouts/chrome/header.includes.html
@@ -1,4 +1,6 @@
 
     <link href="/css/bootstrap.css" rel="stylesheet">
     <link href="/css/font-awesome.css" rel="stylesheet">
-    <link href="/css/custom.css" rel="stylesheet">
+    <link href="css/stylish-portfolio.css" rel="stylesheet">
+
+    
