layout for blog post

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -7,9 +7,9 @@
 
 <div id="top" class="header">
     <div class="vert-text">
-        <h1>bluechestnut</h1>
+        <h1><img class="img-portfolio img-responsive" src="images/icon_small.png" alt="bluechestnut logo">bluechestnut</h1>
         <h3>
-            <em>We</em> make Agile posible,
+            <em>We</em> make Agile posible.
         </h3>
         <a href="#about" class="btn btn-default btn-lg">Tell me more!</a>
     </div>
@@ -93,7 +93,7 @@
             <div class="col-md-4 col-md-offset-2 text-center">
                 <div class="portfolio-item">
                     <a href="#">
-                        <img class="img-portfolio img-responsive" src="img/portfolio-1.jpg">
+                        <img class="img-portfolio img-responsive" src="images/portfolio-1.jpg">
                     </a>
                     <h4>Cityscape</h4>
                 </div>
@@ -101,7 +101,7 @@
             <div class="col-md-4 text-center">
                 <div class="portfolio-item">
                     <a href="#">
-                        <img class="img-portfolio img-responsive" src="img/portfolio-2.jpg">
+                        <img class="img-portfolio img-responsive" src="images/portfolio-2.jpg">
                     </a>
                     <h4>Is That On Fire?</h4>
                 </div>
@@ -111,7 +111,7 @@
             <div class="col-md-4 col-md-offset-2 text-center">
                 <div class="portfolio-item">
                     <a href="#">
-                        <img class="img-portfolio img-responsive" src="img/portfolio-3.jpg">
+                        <img class="img-portfolio img-responsive" src="images/portfolio-3.jpg">
                     </a>
                     <h4>Stop Sign</h4>
                 </div>
@@ -119,7 +119,7 @@
             <div class="col-md-4 text-center">
                 <div class="portfolio-item">
                     <a href="#">
-                        <img class="img-portfolio img-responsive" src="img/portfolio-4.jpg">
+                        <img class="img-portfolio img-responsive" src="images/portfolio-4.jpg">
                     </a>
                     <h4>Narrow Focus</h4>
                 </div>
@@ -144,14 +144,10 @@
 <!-- /Call to Action -->
 
 <!-- Map -->
-<div id="contact" class="map">
-    <iframe width="100%" height="100%" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?f=q&amp;source=s_q&amp;hl=en&amp;geocode=&amp;q=Twitter,+Inc.,+Market+Street,+San+Francisco,+CA&amp;aq=0&amp;oq=twitter&amp;sll=28.659344,-81.187888&amp;sspn=0.128789,0.264187&amp;ie=UTF8&amp;hq=Twitter,+Inc.,+Market+Street,+San+Francisco,+CA&amp;t=m&amp;z=15&amp;iwloc=A&amp;output=embed"></iframe>
-    <br />
-    <small>
-        <a href="https://maps.google.com/maps?f=q&amp;source=embed&amp;hl=en&amp;geocode=&amp;q=Twitter,+Inc.,+Market+Street,+San+Francisco,+CA&amp;aq=0&amp;oq=twitter&amp;sll=28.659344,-81.187888&amp;sspn=0.128789,0.264187&amp;ie=UTF8&amp;hq=Twitter,+Inc.,+Market+Street,+San+Francisco,+CA&amp;t=m&amp;z=15&amp;iwloc=A"></a>
-    </small>
-    </iframe>
+<div id="contact">
+
 </div>
+
 <!-- /Map -->
 
 
