--- a/layouts/chrome/header.includes.html
+++ b/layouts/chrome/header.includes.html
@@ -1,6 +1,4 @@
 
     <link href="/css/bootstrap.css" rel="stylesheet">
     <link href="/css/font-awesome.css" rel="stylesheet">
-    <link href="css/stylish-portfolio.css" rel="stylesheet">
-
-    
+    <link href="/css/stylish-portfolio.css" rel="stylesheet">
