--- a/layouts/post/single.html
+++ b/layouts/post/single.html
@@ -1,15 +1,21 @@
 {{ template "chrome/header.html" . }}
 <body>
 {{ template "chrome/navbar.html" . }}
+
+
+<div id="top" class="header">
+    <div class="vert-text">
+        <h1>{{ .Title }}</h1>
+    </div>
+</div>
+
+
 <div class="container">
-    <div class="row">
+    <div class="row top-row">
         <div class="col-md-9">
-            <div class="well well-sm">
-                    <h3>{{ .Title }}<br> <small>{{ .Description }}</small></h3>
-                    <hr>
-                    {{ .Content }}
-            </div>
-            {{ template "_internal/disqus.html" . }}
+
+            {{ .Content }}
+            
         </div>
 
         <!-- Sidebar -->
@@ -31,6 +37,12 @@
             {{ template "chrome/menu.html" . }}
         </div>
     </div>
-{{ template "chrome/footer.copyright.html" . }}
+
 </div>
+
+{{ template "chrome/footer.copyright.html" . }}
+
 {{ template "chrome/footer.html" . }}
+
+</body>
+</html>
