--- a/static/css/stylish-portfolio.css
+++ b/static/css/stylish-portfolio.css
@@ -111,7 +111,7 @@ body {
   height: 100%;
   width: 100%;
   position: relative;
-  background: url(../images/bg.jpg) no-repeat center center fixed; 
+  background: url(../images/bg.jpg) no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -233,4 +233,8 @@ i.scroll:hover {
 	height: 75%;
   }
 
+}
+
+.top-row {
+  margin-top: 60px;
 }
