--- a/layouts/index.html
+++ b/layouts/index.html
@@ -9,7 +9,7 @@
     <div class="vert-text">
         <h1><img class="img-portfolio img-responsive" src="images/icon_small.png" alt="bluechestnut logo">bluechestnut</h1>
         <h3>
-            <em>We</em> make Agile posible.
+            <em>We</em> make Agile possible.
         </h3>
         <a href="#about" class="btn btn-default btn-lg">Tell me more!</a>
     </div>
