--- a/layouts/chrome/footer.copyright.html
+++ b/layouts/chrome/footer.copyright.html
@@ -3,11 +3,7 @@
                 <div class="row">
                     <div class="col-md-6 col-md-offset-3 text-center">
                         <ul class="list-inline">
-                            <li><i class="fa fa-facebook fa-3x"></i>
-                            </li>
-                            <li><i class="fa fa-twitter fa-3x"></i>
-                            </li>
-                            <li><i class="fa fa-dribbble fa-3x"></i>
+                            <li><a href="https://twitter.com/bluechestnutLTD"><i class="fa fa-twitter fa-2x">bluechestnut</i></a>
                             </li>
                         </ul>
                         <div class="top-scroll">
