--- a/layouts/chrome/navbar.html
+++ b/layouts/chrome/navbar.html
@@ -13,11 +13,9 @@
                 <ul class="nav navbar-nav">
                     <li><a href="/#top">Home</a>
                     </li>
-                    <li><a href="/#about">About</a>
-                    </li>
                     <li><a href="/#services">Services</a>
                     </li>
-                    <li><a href="/#portfolio">Portfolio</a>
+                    <li><a href="/#portfolio">About</a>
                     </li>
                     <li><a href="/post">Blog</a>
                     </li>
