--- a/layouts/index.html
+++ b/layouts/index.html
@@ -21,8 +21,8 @@
     <div class="container">
         <div class="row">
             <div class="col-md-6 col-md-offset-3 text-center">
-                <h2>Subtle Sidebar is the Perfect Template for your Next Portfolio Website Project!</h2>
-                <p class="lead">This template really has it all. It's up to you to customize it to your liking! It features some fresh photography courtesy of <a target="_blank" href="http://join.deathtothestockphoto.com/">Death to the Stock Photo</a>.</p>
+                <h2>Unleash the power of your teams</h2>
+                <p class="lead">We provide products and services to make Agile possible.</p>
             </div>
         </div>
     </div>
@@ -33,38 +33,31 @@
 <div id="services" class="services">
     <div class="container">
         <div class="row">
-            <div class="col-md-4 col-md-offset-4 text-center">
+            <div class="col-md-3 col-md-offset-5 text-center">
                 <h2>Our Services</h2>
                 <hr>
             </div>
         </div>
         <div class="row">
-            <div class="col-md-2 col-md-offset-2 text-center">
+            <div class="col-md-3 col-md-offset-2 text-center">
                 <div class="service-item">
-                    <i class="service-icon fa fa-rocket"></i>
-                    <h4>Spacecraft Repair</h4>
-                    <p>Did your navigation system shut down in the middle of that asteroid field? We can repair any dings and scrapes to your spacecraft!</p>
+                    <i class="service-icon fa fa-users"></i>
+                    <h4>Consultancy</h4>
+                    <p>We can help you to improve your team, XP, Scrum or Kanban, take the best for you and apply it in everyday task.</p>
                 </div>
             </div>
-            <div class="col-md-2 text-center">
+            <div class="col-md-3 text-center">
                 <div class="service-item">
-                    <i class="service-icon fa fa-magnet"></i>
-                    <h4>Problem Solving</h4>
-                    <p>Need to know how magnets work? Our problem solving solutions team can help you identify problems and conduct exploratory research.</p>
+                    <i class="service-icon fa fa-laptop"></i>
+                    <h4>Products</h4>
+                    <p>We are working in the next generation of software to visualize your team development flow.</p>
                 </div>
             </div>
-            <div class="col-md-2 text-center">
+            <div class="col-md-3 text-center">
                 <div class="service-item">
-                    <i class="service-icon fa fa-shield"></i>
-                    <h4>Blacksmithing</h4>
-                    <p>Planning a time travel trip to the middle ages? Preserve the space time continuum by blending in with period accurate armor and weapons.</p>
-                </div>
-            </div>
-            <div class="col-md-2 text-center">
-                <div class="service-item">
-                    <i class="service-icon fa fa-pencil"></i>
-                    <h4>Pencil Sharpening</h4>
-                    <p>We've been voted the best pencil sharpening service for 10 consecutive years. If you have a pencil that feels dull, we'll get it sharp!</p>
+                    <i class="service-icon fa fa-flask"></i>
+                    <h4>Mentoring</h4>
+                    <p>We help your team to learn, grow, and keep the continouos improvement philosofy.</p>
                 </div>
             </div>
         </div>
@@ -75,7 +68,7 @@
 <!-- Callout -->
 <div class="callout">
     <div class="vert-text">
-        <h1>A Dramatic Text Area</h1>
+        <h1>Human value to make Agile possible</h1>
     </div>
 </div>
 <!-- /Callout -->
@@ -85,43 +78,42 @@
     <div class="container">
         <div class="row">
             <div class="col-md-4 col-md-offset-4 text-center">
-                <h2>Our Work</h2>
+                <h2>We are:</h2>
                 <hr>
             </div>
         </div>
         <div class="row">
-            <div class="col-md-4 col-md-offset-2 text-center">
+            <div class="col-md-3 col-md-offset-2 text-center">
                 <div class="portfolio-item">
-                    <a href="#">
-                        <img class="img-portfolio img-responsive" src="images/portfolio-1.jpg">
-                    </a>
-                    <h4>Cityscape</h4>
+                    <img src="/images/profile.jpg" class="img-responsive img-circle" alt="David Hernandez Picture"/>
+                    <h4>David Hernandez</h4>
+                    <p>Founder</p>
+                    <p><a href="https://twitter.com/dahernan"><i class="fa fa-twitter">dahernan</i></a></p>
+
                 </div>
             </div>
-            <div class="col-md-4 text-center">
+            <div class="col-md-3 col-md-offset-2 text-center">
                 <div class="portfolio-item">
-                    <a href="#">
-                        <img class="img-portfolio img-responsive" src="images/portfolio-2.jpg">
-                    </a>
-                    <h4>Is That On Fire?</h4>
+                    <i class="service-icon fa fa-users"></i>
+                    <h4>Blanca Garcia</h4>
+                    <p>.</p>
                 </div>
             </div>
+
         </div>
         <div class="row">
-            <div class="col-md-4 col-md-offset-2 text-center">
+            <div class="col-md-3 col-md-offset-2 text-center">
                 <div class="portfolio-item">
-                    <a href="#">
-                        <img class="img-portfolio img-responsive" src="images/portfolio-3.jpg">
-                    </a>
-                    <h4>Stop Sign</h4>
+                    <i class="service-icon fa fa-users"></i>
+                    <h4>David Hernandez</h4>
+                    <p>.</p>
                 </div>
             </div>
-            <div class="col-md-4 text-center">
+            <div class="col-md-3 col-md-offset-2 text-center">
                 <div class="portfolio-item">
-                    <a href="#">
-                        <img class="img-portfolio img-responsive" src="images/portfolio-4.jpg">
-                    </a>
-                    <h4>Narrow Focus</h4>
+                    <i class="service-icon fa fa-users"></i>
+                    <h4>David Hernandez</h4>
+                    <p>.</p>
                 </div>
             </div>
         </div>
